feat: add readme

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,7 +1,7 @@
-name: clickstream_flutter
-description: clickstream flutter SDK
-version: 0.0.1
-homepage:
+name: clickstream_analytics
+description: AWS Solution Clickstream Analytics SDK for Flutter
+version: 0.1.0
+homepage: https://github.com/awslabs/clickstream-flutter
 
 environment:
   sdk: '>=3.1.3 <4.0.0'
@@ -35,7 +35,7 @@ flutter:
   plugin:
     platforms:
       android:
-        package: software.aws.solution.clickstream_flutter
+        package: software.aws.solution.clickstream_analytics
         pluginClass: ClickstreamFlutterPlugin
       ios:
         pluginClass: ClickstreamFlutterPlugin
