--- a/android/build.gradle
+++ b/android/build.gradle
@@ -1,4 +1,4 @@
-group 'software.aws.solution.clickstream_flutter'
+group 'software.aws.solution.clickstream_analytics'
 version '1.0-SNAPSHOT'
 
 buildscript {
@@ -26,7 +26,7 @@ apply plugin: 'kotlin-android'
 
 android {
     if (project.android.hasProperty("namespace")) {
-        namespace 'software.aws.solution.clickstream_flutter'
+        namespace 'software.aws.solution.clickstream_analytics'
     }
 
     compileSdkVersion 33
