--- a/example/pubspec.yaml
+++ b/example/pubspec.yaml
@@ -17,7 +17,7 @@ dependencies:
   flutter:
     sdk: flutter
 
-  clickstream_flutter:
+  clickstream_analytics:
     # When depending on this package from a real application you should use:
     #   clickstream_flutter: ^x.y.z
     # See https://dart.dev/tools/pub/dependencies#version-constraints
