--- a/.github/workflows/build-android.yml
+++ b/.github/workflows/build-android.yml
@@ -20,6 +20,9 @@ jobs:
           channel: 'stable'
       - name: Run build apk
         run: |
+          chmod +x release.sh
+          ./release.sh 0.3.0
+          git diff
           flutter pub get
           cd example
           flutter build apk
